src/ws/login.css
/* Login page is standalone, all related CSS is here */

*,
:after,
:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
}

body {
  margin: 0;
  font-family: RedHatText, Helvetica, Arial, sans-serif;
  background-color: #333;
  color: #fff;
  line-height: 1.5;
}

.btn,
label {
  font-weight: 600;
}

.btn,
img {
  vertical-align: middle;
}

#login-wait-validating div,
.col-xs-12 {
  float: left;
}

#option-group,
.btn,
.cross,
button {
  cursor: pointer;
}

#option-group svg,
.cross {
  opacity: .7;
}

a {
  color: inherit;
  text-decoration: none;
}

.btn:focus,
a:focus {
  outline: -webkit-focus-ring-color auto 5px;
  outline: dotted thin;
  outline-offset: -2px;
}

a:active,
a:hover {
  outline: 0;
}

a:focus,
a:hover {
  color: #fff;
  text-decoration: underline;
}

img {
  border: 0;
}

button,
input,
select,
textarea {
  font-family: inherit;
  margin: 0;
  font-size: inherit;
  line-height: inherit;
}

button {
  -webkit-appearance: button;
  overflow: visible;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

p {
  margin: 0 0 10px;
}

.container {
  margin-right: auto;
  margin-left: auto;
}

#option-group {
  margin-top: 2rem;
  margin-bottom: 2rem;
}
#server-group {
  margin-top: -1rem;
  margin-bottom: 2rem;
}

.container:after,
.container:before,
.form-group:after,
.form-group:before,
.row:after,
.row:before {
  content: " ";
  display: table;
}

.container:after,
.row:after {
  clear: both;
}

.col-lg-5,
.col-lg-7,
.col-md-10,
.col-md-2,
.col-md-6,
.col-sm-1,
.col-sm-10,
.col-sm-12,
.col-sm-2,
.col-sm-3,
.col-sm-5,
.col-sm-6,
.col-sm-7,
.col-xs-12 {
  position: relative;
  min-height: 1px;
  padding-left: 20px;
  padding-right: 20px;
}

.col-xs-12 {
  width: 100%;
}

label {
  display: inline-block;
}

#option-group,
.control-label {
  font-size: 0.875rem;
}

[role=form] .control-label,
form .control-label {
  display: flex;
  align-items: center;
  min-height: 2rem;
}

.form-control {
  color: #151515;
}

.form-control[type=password],
.form-control[type=text] {
  display: block;
  width: 100%;
  padding: 0.25rem 0.5rem;
  background-color: #fff;
  background-image: none;
  border: 1px solid #ededed;
  border-bottom-color: #72767b;
  border-radius: 1px;
  transition: border-color .15s ease-in-out;
  color: #151515;
}

.form-control[type=password]:hover,
.form-control[type=text]:hover,
.form-control[type=password]:focus,
.form-control[type=text]:focus {
  border-bottom-color: #06c;
}

.form-control[type=password]:focus,
.form-control[type=text]:focus {
  padding-bottom: calc(0.25rem - 1px);
  border-bottom-width: 2px;
}

.form-control:focus {
  outline: 0;
}

.form-control:-moz-placeholder {
  color: #999;
  font-style: italic;
}

.form-control::-moz-placeholder {
  color: #999;
  font-style: italic;
  opacity: 1;
}

.form-control:-ms-input-placeholder {
  color: #999;
  font-style: italic;
}

.form-control::-webkit-input-placeholder {
  color: #999;
  font-style: italic;
}

.checkbox-row {
  margin: 1rem 0 0;
  display: flex;
  align-items: baseline;
}

.checkbox-row > input[type=checkbox] {
  width: 16px;
  height: 16px;
  align-self: start;
  margin-top: calc((1.5rem - 16px) / 2);
  margin-right: 0.5rem;
}

label.checkbox {
  font: inherit;
}



.help-block {
  display: block;
  margin-top: 5px;
  margin-bottom: 10px;
  color: #737373;
}

.btn,
.caret {
  display: inline-block;
}

#login-button[disabled] .spinner {
  display: inline-flex;
}

.btn,
.control-label {
  margin-bottom: 0;
}

.control-label {
  margin-top: 0;
  padding-top: 3px;
}

.form-group:after {
  clear: both;
  margin-bottom: 15px;
}

.btn {
  text-align: center;
  background-image: none;
  border: 1px solid transparent;
  white-space: nowrap;
  padding: 2px 6px;
  border-radius: 1px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

.btn:focus,
.btn:hover {
  color: #4d5258;
  text-decoration: none;
}

.btn:active {
  outline: 0;
  background-image: none;
}

@-ms-viewport {
  width: device-width;
}

.btn {
  padding: 0.25rem 0.5rem;
  border-radius: 1px;
  font-size: inherit;
}

.btn-primary {
  background-color: #06c;
  border-color: #06c;
  color: #fff;
}

.btn-primary:active,
.btn-primary:focus,
.btn-primary:hover {
  background-color: #004080;
  border-color: #004080;
  color: #fff;
}

.btn-primary:active {
  background-image: none;
}

@font-face {
  font-family: RedHatText;
  font-style: normal;
  font-weight: 400;
  src: url(cockpit/static/fonts/RedHatText-Regular.woff2) format('woff2');
}

@font-face {
  font-family: RedHatText;
  font-style: normal;
  font-weight: 700;
  src: url(cockpit/static/fonts/RedHatText-Medium.woff2) format('woff2');
}

.login-pf {
  height: 100%;
}

.login-pf #brand {
  position: relative;
  top: -70px;
}

.login-pf #brand img {
  display: block;
  margin: 0 auto;
  max-width: 100%;
}

.login-pf #badge {
  display: block;
  margin: 20px auto 70px;
  position: relative;
  text-align: center;
}

.login-pf .container {
  background-color: rgba(255, 255, 255, .055);
  clear: right;
  padding-bottom: 40px;
  padding-top: 20px;
  width: auto;
}

.login-pf .container .details p:first-child {
  border-top: 1px solid #474747;
  padding-top: 25px;
  margin-top: 25px;
}

.login-pf .container .details p {
  margin-bottom: 2px;
}

.login-pf .container .control-label {
  font-weight: 400;
}

.login-pf .container .help-block {
  color: #fff;
}

.login-pf .container .form-group:last-child,
.login-pf .container .form-group:last-child .help-block:last-child {
  margin-bottom: 0;
}
/* ... */

